Modificações API
