# API/Event+_API/sprint-2-api/Event+/webapi.event+/Interfaces/IComentariosEventoRepository.cs
@@ -6,7 +6,8 @@ namespace webapi.event_.Interfaces
     {
         void Cadastrar(ComentariosEvento comentarioEvento);
         void Deletar(Guid id);
-        List<ComentariosEvento> Listar();
+        List<ComentariosEvento> Listar(Guid id);
         ComentariosEvento BuscarPorId(Guid id);
+        ComentariosEvento BuscarPorIdUsuario(Guid idUsuario, Guid idEvento);
     }
 }
