# API/Event+_API/sprint-2-api/Event+/webapi.event+/Interfaces/IEventoRepository.cs
@@ -8,6 +8,8 @@ namespace webapi.event_.Interfaces
         void Deletar(Guid id);
         List<Evento> Listar();
         List<Evento> ListarProximos();
+        List<Evento> ListarAnteriores();
+
 
         Evento BuscarPorId(Guid id);
         void Atualizar(Guid id, Evento evento);
