# API/Event+_API/sprint-2-api/Event+/webapi.event+/Repositories/ComentariosEventoRepository.cs
@@ -107,7 +107,7 @@ namespace webapi.event_.Repositories
             }
         }
 
-        public List<ComentariosEvento> Listar()
+        public List<ComentariosEvento> Listar(Guid idEvento)
         {
 
             try
@@ -131,7 +131,7 @@ namespace webapi.event_.Repositories
                             NomeEvento = c.Evento!.NomeEvento,
                         }
 
-                    }).ToList();
+                    }).Where(c => c.IdEvento == idEvento).ToList();
             }
             catch (Exception)
             {
@@ -140,7 +140,7 @@ namespace webapi.event_.Repositories
             }
         }
 
-        public List<ComentariosEvento> ListarSomenteExibe()
+        public List<ComentariosEvento> ListarSomenteExibe(Guid idEvento)
         {
 
             try
@@ -164,7 +164,7 @@ namespace webapi.event_.Repositories
                             NomeEvento = c.Evento!.NomeEvento,
                         }
 
-                    }).Where(c => c.Exibe == true).ToList();
+                    }).Where(c => c.Exibe == true && c.IdEvento == idEvento).ToList();
             }
             catch (Exception)
             {
