# API/Event+_API/sprint-2-api/Event+/webapi.event+/Repositories/EventoRepository.cs
@@ -134,7 +134,18 @@ namespace webapi.event_.Repositories
                 throw;
             }
         }
-        
-        
+
+        public List<Evento> ListarAnteriores()
+        {
+            try
+            {
+                return _context.Evento
+                    .Where(e => e.DataEvento < DateTime.Now).OrderBy(e => e.DataEvento).ToList();
+            }
+            catch (Exception)
+            {
+                throw;
+            }
+        }
     }
 }
